# InsightsX

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  prometheus.yml
proto/: logs.proto
src/: lib.rs  main.rs
src/config/: mod.rs
src/grpc/: server.rs
src/ingestion/: http.rs  mod.rs  syslog.rs  tcp.rs  udp.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/models/: log_entry.rs  mod.rs  processor.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/storage/: clickhouse.rs
