[package]
name = "insightsx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1"
kafka = "0.10.0" # replaces rdkafka completely
bytes = "1"
prost = "0.13.5"
tonic = "0.12.3" 
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1" 


[build-dependencies]
tonic-build = "0.12.3"
