[package]
name = "insightsx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_consumer"
path = "src/bin/log_consumer.rs"

[[bin]]
name = "insightsx"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1"
kafka = "0.10.0"
bytes = "1"
prost = "0.13.5"
tonic = { version = "0.12.3", features = ["prost"] }
prost-types = "0.13.5"
opentelemetry = "0.29.0"
opentelemetry-jaeger = "0.22.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-opentelemetry = "0.30.0"
chrono = { version = "0.4.40", features = ["serde"] }
tokio-stream = "0.1" 
snap = "1.0"
rmp-serde = "1"
futures = "0.3"
rayon = "1.8"
prometheus = "0.13.4"
warp = "0.3"
lazy_static = "1.4"
clickhouse = { version = "0.13.2", features = ["native-tls"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
simd-json = { version = "0.15.0", features = ["serde_impl"] }
rdkafka = { version = "0.37", features = ["tokio", "cmake-build"] }
dotenv = "0.15"




[build-dependencies]
tonic-build = "0.12.3"
